--- a/database.html
+++ b/database.html
@@ -33,6 +33,7 @@
 <!--JUMBOTRON HERE-->
 <!--SECTION/ARTICES-->
   <div class="container">
+    <section class="info">
     <div class="row">
       <div class="col-md">
         <h1>ITEC 3610: INTRO TO IT & APPS // DATABASE ASSESSMENT</h1>
@@ -42,13 +43,15 @@
           Check out the database on Google Sheets.</a>
       </div>
       <div class="col-md">
-        <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="placeholder">
+        <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="google sheet image of database assessment">
       </div>
-</div>
-
+    </div>
+    </section>
+    
+    <section class="info">
     <div class="row">
       <div class="col-md">
-        <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="placeholder">
+        <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="google sheet image of inventory database">
       </div>
       <div class="col-md">
         <h1>ITEC 3610: INTRO TO IT & APPS // INVENTORY DATABASE</h1>
@@ -57,7 +60,7 @@
           Check out the database on Google Sheets.</a>
       </div>
     </div>
-
+  </section>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
