--- a/film.html
+++ b/film.html
@@ -34,6 +34,7 @@
         </div>
     </header>
     <div class="container">
+      <section class="info">
         <div class="row">
             <div class="col-md">
                 <h1>MCOM 3390 & MCOMM 2300 MEDIA PRODUCTION</h1>
@@ -43,12 +44,17 @@
                 <p><em>Can't Escape The Mischief</em> is an feature film that tells a story of my quarantine experience during the COVID-19 pandemic.</p>
             </div>
             <div class="col-md">
-                <img src="assets/images/film.png" class="img-fluid" alt="placeholder">
+                <img src="assets/images/film.png" class="img-fluid" alt="three faded film strips arranged horizontally">
             </div>
         </div>
+      </section>
 <!--VIDEO GRAPHIC IMAGE-->
 <!--VIDEO OF CAUSE THAT'S WHAT I DO-->
 <!--VIDEO OF CAN'T ESCAPE THE MISCHIEF-->
+<div class="credits">
+  <h2>CREDITS</h2>
+  <p>A-roll Film & Title Card: Yi Yao</p>
+</div>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
