--- a/projects.html
+++ b/projects.html
@@ -34,7 +34,7 @@
         </div>
     </header>
     <div class="container">
-    <!--Section & Articles-->
+    <section class="web-design-projects">
         <div class="row">
             <div class="col-md">
                 <h1>WEB DEVELOPMENT & DESIGN</h1>
@@ -50,9 +50,11 @@
                 <a href="web-university-district.html">University District</a>
             </div>
         </div>
+    </section>
     <!--End Section-->
       
     <!--Section & Articles-->
+    <section class="ux-projects">
         <div class="row">
             <div class="col-md">        
                 <a href="ux-campus-police.html">UALR Campus Police App</a>
@@ -65,10 +67,12 @@
                 <p>"Design is not just what it looks like and feels like. Design is how it works." -- Steve Jobs, co-founder of Apple, Inc.</p>
             </div>
         </div>
+    </section>
     <!--End Section-->
 
 
     <!--Section & Articles-->
+    <section class="database-projects">
         <div class="row">
             <div class="col-md">    
                 <h1>DATABASE & PROGRAMMING</h1>
@@ -81,10 +85,12 @@
                 <a href="programming.html">Programming</a>
             </div>
         </div>
+    </section>
     <!--End Section-->
 
 
     <!--Section & Articles-->
+    <section class="communication-skills">
         <div class="row">
             <div class="col-md">
                 <a href="film.html">Film</a>
@@ -98,12 +104,13 @@
                 <p>"Styles come and go. Good design is a language, not a style." -- Massimo Vignelli, Italian designer</p>
             </div>
         </div>
-
+    </section>
 
     <!--End Section-->
 
 
     <!--Section & Articles-->
+    <section class="writing-skills">
         <div class="row">
             <div class="col-md">    
                 <h1>WRITING</h1>
@@ -116,6 +123,7 @@
                 <a href="reflection.html">Watch Me Grow</a>
             </div>
         </div>
+    </section>
     <!--End Section-->
 
     
