--- a/technical-doc.html
+++ b/technical-doc.html
@@ -35,18 +35,21 @@
     </header>
     <div class="container">
     <!--Large image of Adobe XD doc title After Effects-->
+    <a href="">.ae of xd</a>
+    <section class="info">
         <div class="row">
             <div class="col-6 col-md-4">
-            <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
-            <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
+              <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
+              <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
     means little if our client doesn't know how to use the software to view it. So I created a short instructional document on
     how to view a website prototype through Adobe XD.</p>
-            <a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
+              <a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
             </div>
             <div class="col-md-8">
-            <img src="">
+              <a href="">image</a>
             </div>
         </div>
+    </section>
 <!--Image of prototype to the right of text-->
 <!--Image of prototype under text on the left-->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
