--- a/typography.html
+++ b/typography.html
@@ -33,50 +33,58 @@
         Josephine Aaron Weathington
         </div>
     </header>
-      <!--JUMBOTRON MENU IMAGE HERE-->
     <div class="container">
-        <img src="assets/images/menu-redesign.webp">
+        <div class="row">
+            <div class="col-12">
+                <img src="assets/images/menu-redesign.webp" alt="a menu of Sonny William's Steakhouse redesigned a creative way using typography principles">
+            </div>
+        </div>
+
+        <section class="info">
         <div class="row">
             <div class="col-6 col-md-4">
                 <h1>ARST 3341: TYPOGRAPHY 2021</h1>
                 <p>An exploration of the art and practice of typography as a tool for visual communication.</p>
             </div>
             <div class="col-md-8">
-                <img src="assets/images/info-type-1.1.webp">
+                <img src="assets/images/info-type-1.1.webp" alt="information type-1 creatively rearranged using typography principles">
             </div>
         </div>
         
-    <!--2 INFO TYPE IMAGES TO LEFT AND RIGHT-->
         <div class="row">
             <div class="col-md">
-                <img src="assets/images/info-type-2.1.webp">
+                <img src="assets/images/info-type-2.1.webp" alt="information type-2 creatively rearranged using typography principles">
             </div>
             <div class="col-md">
-                <img src="assets/images/info-type-3.1.webp">
+                <img src="assets/images/info-type-3.1.webp" alt="information type-3 creatively rearranged using typography principles">
             </div>
         </div>
+        </section>
+
+        <section class="info">
         <div class="row">
             <div class="col-md">
-                <img src="assets/images/publication.webp">
+                <img src="assets/images/publication.webp" alt="a publication article for a fictional magazine called Road">
             </div>
         </div>
-        <div class="row">
-            <div class="col-md-8">
-                <img src="assets/images/Magazine.Cover.webp">
-            </div>
             <div class="col-6 col-md-4">
                 <h1>ARST 3340: INTRO TO GRAPHIC DESIGN 2021</h1>
                 <p>Editorial designs of fictional organizations that communicate a controversial issue of my choosing.</p>
             </div>
-        </div>
+            <div class="row">
+                <div class="col-md-8">
+                    <img src="assets/images/Magazine.Cover.webp" alt="cover design for a fictional magazine called Road">
+                </div>
+            </div>
         <div class="row">
             <div class="col-md-5">
-                <img src="assets/images/poster.webp"> 
+                <img src="assets/images/poster.webp" alt="poster raising awareness about a particular social issue, the Stand Your Ground law."> 
             </div>
         </div>
+        </section>
 
     <!--IMAGE OF POSTER FOR CHANGE ON RIGHT, MAGAZINE COVER ON LEFT-->
-    <div class="wrap">
+    <div class="credits">
         <h2>CREDITS</h2>
         <p>Copywriter // How Do We End Racism In Policing: American Civil Liberties Union (ACLU)</p>
         <p>Photograph // James Baldwin Image: Popperfoto/Getty Images</p>
