--- a/web-university-district.html
+++ b/web-university-district.html
@@ -33,18 +33,32 @@
         Josephine Aaron Weathington
         </div>
     </header>
-<div class="container">
-<!--adobe after effects here top-->
-<div class="wrap">
-    <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
-    <p>A wordpress website for the UALR University District Parnership to market the University District as a destination, to 
+  <div class="container">
+    <a href="">.ae header</a>
+    <section class="info">
+      <div class="row">
+        <div class="col-md">
+          <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
+          <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
         encourage development, and to promote the business and services within the area.</p>
-    <p>Stylistic choices were made to...</p>
-    <p>Design decisions included...</p>
-    <a href="https://web-projects.net/ud/" target="blank">Visit the site.</a>
-</div>
-<!--adobe after effects mobile view here to right-->
-<!--logo image here to left of .ae-->
+          <p>Stylistic choices were made to...</p>
+            <dl>
+              <dt>My Role</dt>
+              <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
+            project. Later, my primary responsibility became mobile css development.</dd>
+            </dl>
+          <a href="" target="blank">Visit the site.</a>
+        </div>
+        <div class="col-md">
+        <a href="">mobile .ae</a>
+        </div>
+      </div>
+    </section>
+
+    <div class="credits">
+      <h2>CREDITS</h2>
+      <p>Developers: District 3 (D3)</p>
+    </div>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
