--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
         </div>
     </header>
 
-    <div class="container intro">
-        <div class="row" >
+    <div class="container">
+    <section class="intro">
+        <div class="row about" >
             <div class="col-md-8">
             <h1>Hey, I'm Josephine.</h1>
                 <p>I'm a designer and am currently studying at the University of Arkansas at 
@@ -40,10 +41,10 @@
                 Bachelors of Arts Web Design & Development and Information 
                 Technology Minor.</p>
                 <p>I am passionate about UX design and about exploring ways of applying art as a tool for visual communication.</p>
-                <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume</a> & <a href="assets/documents/cover-letter.pdf" 
-                    target="blank">cover letter</a>.</p>
+                <p>Here is my <a href="assets/documents/resume.pdf" target="blank">resume<span class="screen-reader-only">(opens in a new tab)</span></a> & <a href="assets/documents/cover-letter.pdf" 
+                    target="blank">cover letter<span class="screen-reader-only">(opens in a new tab)</span></a>.</p>
                 <div class="row">
-                    <div class="col-md">
+                    <div class="col-md skills">
                         <h2>SKILLS</h2>
                             <dl>
                         <dt>WEB DEVELOPMENT</dt>
@@ -58,7 +59,7 @@
                         <dd>Figma, Trello, Google Workspace</dd>
                             </dl>
                     </div>
-                    <div class="col-md">  
+                    <div class="col-md experience">  
                     <h2>COURSES & EXPERIENCE</h2>
                         <dl>
                     <dt>COURSES</dt>
@@ -73,8 +74,9 @@
                     </div>
                 </div>
             </div>
-    <div class="col-6 col-md-4"><img src="assets/images/temporary-portrait.jpg" alt="portrait"/> </div>  
-</div>
+            <div class="col-6 col-md-4"><img src="assets/images/temporary-portrait.jpg" alt="self-portrait"> </div>
+        </div>
+    </section>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
     <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
@@ -90,5 +92,6 @@
   </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
+<script src="assets/js/external-links.js"></script>
 </body>
 </html>
