--- a/programming.html
+++ b/programming.html
@@ -34,7 +34,8 @@
         </div>
     </header>
     <div class="container">
-<!--JUMBOTRON HERE MARS ROVER // change picture to adobe free stock pic-->
+        <a href="">image</a>
+        <section class="info">
         <div class="row">
             <div class="col-md">
                 <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // MARS ROVER 2022</h1>
@@ -42,19 +43,19 @@
                     <a href="" target="blank">Test the program here.</a>
             </div>
             <div class="col-md">
-                <img src="assets/images/mars-explorer.webp">
+                <img src="assets/images/mars-explorer.webp" alt="screen image of mars rover program">
             </div>
         </div>
-    <!--Embed js code of rover right of text-->
-    <div class="row">
-        <div class="col-md">
+        <div class="row">
+            <div class="col-md">
                 <p>Embed/image of source code goes here</p>
+            </div>
         </div>
-    </div>
-    <!--code source image below-left-->
+        </section>
+        <section class="info">
            <div class="row">
             <div class="col-md">
-                <img src="assets/images/currency-value.webp">
+                <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
             </div>
             <div class="col-md">
                 <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // CURRENCY VALUE HISTORY</h1>
@@ -62,12 +63,12 @@
                 <a href="" target="blank">Test the program here.</a>
             </div>
         </div>
-        <!--embed js code below-right-->
         <div class="row justify-content-end">
             <div class="col-md">
                 <p>Embed/image of source code goes here</p>
             </div>
         </div>
+        </section>
 
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
