reflection/semantics/validation

--- a/reflection.html
+++ b/reflection.html
@@ -35,50 +35,75 @@
     </header>
       <div class="container">
         <!--Adobe after effects full width-->
-        <div class="row">
-            <div class="col-md">
-                <h1>IFSC 4610: PROJECT DEVELOPMENT & PORTFOLIO</h1>
-                <p>A reflection on my Capstone Project - the development of the University District website.</p>
-                <dl>
-                <dt>PROJECT DESCRIPTION</dt>
-                <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
-        neighborhoods around the campus for the past 20 years. My team's project was to develop a website that can be a marketing 
-        vehicle for the entire university district and all of their related programs/partners.
-                </dd>
-                <dt>PROJECT ROLES</dt>
-                <dd>Struction & Design: My role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
-        My team and I spent a month completing our design process. First, we met with our client to identify their needs and 
-        expectations. Next, we considered the different types of users who would visit the website and how they may interact with 
-        it. Then, we developed a structure and flow list to visualize how the user may navigate through the website. After we 
-        determined the site structure,  I developed a low-fidelity prototype that we presented to our clients. Once they’ve given 
-        us their feedback, I developed the website page layouts via wordpress to closely resemble the prototype. Once the pages 
-        were created, my teammates collected the content and entered the content within the site. Last, we researched and applied 
-        additional plugins for extra functionality, like the news carousel on the landing page. We also reviewed the site for 
-        responsive design and accessibility.  Finally, we presented our final product to our client and class. To view our design 
-        process, check out my team’s Google Slides presentation on <em>page 5</em>.</dd>
-                </dl>
-            </div>
-            <div class="col-md">
-                <div class="google-slides-container">
-                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569" allowfullscreen="true" mozallowfullscreen="true" webkitallowfullscreen="true"></iframe>
+        <section class="info">
+            <div class="row">
+                <div class="col-md">
+                    <h1>IFSC 4610: PROJECT DEVELOPMENT & PORTFOLIO</h1>
+                    <p>A reflection on my Capstone Project - the development of the University District website.</p>
+                    <dl>
+                    <dt>PROJECT DESCRIPTION</dt>
+                    <dd>The University District has been a project of the University of Arkansas at Little Rock to develop the area and 
+                        neighborhoods around the campus for the past 20 years. My team's project was to develop a website that can be a marketing 
+                        vehicle for the entire university district and all of their related programs/partners.
+                    </dd>
+                    <dt>PROJECT ROLES</dt>
+                    <dd>Struction & Design: My role was to design the website using UI/UX principles and to develop the wordpress page layouts. 
+                        My team and I spent a month completing our design process. First, we met with our client to identify their needs and 
+                        expectations. Next, we considered the different types of users who would visit the website and how they may interact with 
+                        it. Then, we developed a structure and flow list to visualize how the user may navigate through the website. After we 
+                        determined the site structure,  I developed a low-fidelity prototype that we presented to our clients. Once they’ve given 
+                        us their feedback, I developed the website page layouts via wordpress to closely resemble the prototype. Once the pages 
+                        were created, my teammates collected the content and entered the content within the site. Last, we researched and applied 
+                        additional plugins for extra functionality, like the news carousel on the landing page. We also reviewed the site for 
+                        responsive design and accessibility.  Finally, we presented our final product to our client and class. To view our design 
+                        process, check out my team’s Google Slides presentation on <em>page 5</em>.</dd>
+                    </dl>
+                </div>
+                <div class="col-md">
+                    <div class="google-slides-container">
+                    <iframe class="embed-responsive-item" src="https://docs.google.com/presentation/d/e/2PACX-1vTwwGlnpfcX0HUlyvGpl4fTdNMWj3iM1tFGHHciqsgpWmkTzToPhNL50O7YfngGfBrJXJI-EOF89i3O/embed?start=false&loop=false&delayms=3000"  width="960" height="569"></iframe>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
 
 <!--SECTION & ARTICLES-->
         <section class="reflection">
             <h1>REFLECTION</h1>
                 <dl class="reflection-1">
                     <dt>My most challenging moments and what made them so...</dt>
-                    <dd>...</dd>
+                    <dd>A good web design might look simple and easy, but it’s far from linear, especially when the site contains 
+                        a lot of content. Web development is a balancing act between form and function. Finding a good starting 
+                        point to design is tricky because design is messy. Some needed ideas might be overlooked, and without a 
+                        thorough plan, we may find ourselves redesigning to include those ideas. It’s ok to refine an idea or 
+                        design, but to totally redesign a product because of the failure of including important aspects is 
+                        frustrating. Failing to plan, is planning to fail. The planning process is the most challenging part. 
+                        After that, development simply falls in line with the plan.</dd>
                 </dl>
                 <dl class="reflection-2">
                     <dt>My most powerful learning moments and what made them so...</dt>
-                    <dd>...</dd>
+                    <dd>Long before this program, I’ve learned there’s no use in controlling others. The better way
+                         includes cooperation and adaptation. Thanks to this program, I’ve become better at that and I’ve 
+                         discovered how to work around those I cannot work with. <em>Cannot work with?</em> Yes! Yet you wouldn’t know it 
+                         by the looks of it; unless you dig a little deeper. <em>Still confused?</em> Well, the thing is, not everyone 
+                         shares the same level of skills, ambition, interests, or values; and I’ve learned to accept that. You’re
+                         asking for hell fire when you try to force someone to challenge themselves in ways they don’t want to. 
+                         (Sometimes it is necessary, but not in the professional workplace.) Instead, I’ve learned to make the 
+                         most of it by allowing myself to be challenged by the extra weight, and by encouraging my teammates as 
+                         they watch me carry that extra weight. <em>The encouraging part is very important.</em> Eventually, we 
+                         found ourselves accepting the challenge or a piece of it. Choosing to try new things. Creating a better 
+                         something. Not because we were forced to, but because we wanted to see if we could. In the end, we grew 
+                         together. I wish we could all teach and learn from each other in this way.</dd>
                 </dl>
                 <dl class="reflection-3">
                     <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
-                    <dd>...</dd>
+                    <dd>I discovered that I just want to become a better version of myself. Developing a healthy version of ourselves is kind of
+                         like developing a good website. You begin with the content first, then style, then functionality. Progressive enhancement, 
+                         right? In this way, we create a version that is more accessible and responsive. I’ve discovered that most of us don’t 
+                         design our life in that way. We focus more on style (how we appear to others), then functionality (what we “behave” 
+                         like), and last we consider content (what we really know). <em>So am I talking about web design, psychology, what am I 
+                         talking about?</em> I’m talking about all of it! Design is communication. To understand how to effectively communicate 
+                         through design, I need to understand people too, and myself. That’s all I’m trying to say here.</dd>
                 </dl>
                 <dl class="reflection-4">
                     <dt>The most important thing I learned personally...</dt>
@@ -89,6 +114,7 @@
                         distribute diverse cultural expressions. Freedom can't be given. Freedom can't be taken. Not all of us are free, but 
                         within all of us is the process to freedom that has always been here waiting to mature us into the fullness of life; 
                         if only we allow ourselves to <b>submit</b> to the process and <b>actively participate</b> in following its instructions. 
+                        For freedom, is why I enjoy studying and applying UI/UX principles in design. 
                         For a visual of growing into freedom, check out my animation below, <em>Watch Me Grow</em>.
                     </dd>
                 </dl>
@@ -107,7 +133,7 @@
       <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
     </ul>
 </footer>
-</div>
+        </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
