--- a/ux-campus-food.html
+++ b/ux-campus-food.html
@@ -38,111 +38,23 @@
     </header>
     <div class="container">
         <div class="row">
+            <div class="col-md">
+                <a href="">image</a>
+            </div>
+        </div>
+        <section class="info">
+        <div class="row">
             <div class="col-6 col-md-4">
                 <h1>CPSC 4379 FOOD ORDERING SERVICE APP 2022</h1>
                 <p>A prototype design of a food app for a college campus that allows the various restaurants on campus to deliver directly to 
-        students & faculty. Scroll down to review my development process.</p>
+                   students & faculty. Scroll down to review my development process.</p>
                 <a href="">Interact with the prototype.</a>
+                <a href="">Explore the design process.</a>
             </div>
             <div class="col-md-8">
-                <img src="" alt="">
+                <a href="">image</a>
             </div>
         </div>
-
-        <!--SECTIONS-->
-        <section class="research">
-            <h1>RESEARCH</h1>
-            <div class="row">
-                <div class="col-md-1">
-                    <a href="image">image personas</a>
-                </div>
-            </div>
-            <div class="row justify-content-end">
-                <div class="col-md-1">
-                    <a href="image">image scenario map</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md">
-                    <a href="image">image storyboard.1</a>
-                </div>
-                <div class="col-md">
-                    <a href="image">image storyboard.2</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md">
-                    <a href="image">image storyboard.3</a>
-                </div>
-                <div class="col-md">
-                    <a href="image">image storyboard.4</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="design-phase">
-            <h1>DESIGN FLOW</h1>
-            <div class="row">
-                <div class="col-md-1">
-                    <a href="image">image flow plan</a>
-                </div>
-            </div>
-            <div class="row justify-content-end">
-                <div class="col-md-1">
-                    <a href="image">image flow path</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md">
-                    <a href="image">image wireframe.1</a>
-                </div>
-                <div class="col-md">
-                    <a href="image">image wireframe.2</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="prototype-process">
-            <h1>PROTOTYPE PROCESS</h1>
-            <div class="row">
-                <div class="col-md-1">
-                    <a href="image">image flow plan</a>
-                </div>
-            </div>
-            <div class="row justify-content-end">
-                <div class="col-md-1">
-                    <a href="image">image flow path</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md">
-                    <a href="image">image wireframe.1</a>
-                </div>
-                <div class="col-md">
-                    <a href="image">image wireframe.2</a>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-md-1">
-                    <a href="image">image of repeat</a>
-                </div>
-            </div>
-            <div class="row justify-content-end">
-                <div class="col-md-1">
-                    <a href="image">image final wireframe</a>
-                </div>
-            </div>
-        </section>
-
-        <section class="usability-test">
-            <h1>USABILITY TESTING</h1>
-            <div class="row">
-                <div class="col-md">
-                    <p>Review user testing process & analysis here.</p>
-                </div>
-                <div class="col-md">
-                    <a href="image">image of...</a>
-                </div>
         </section>
 <!--END OF ARTICLES-->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
