--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -31,30 +31,27 @@
         </nav>
         <div class="container author">
         Josephine Aaron Weathington
-        </div>
+      </div>
     </header>
-<div class="container">
-<div class="wrap">
-    <h1>CPSC 4379 CAMPUS SAFTEY APP 2022</h1>
-    <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus.</p>
-    <a href="">Interact with the prototype.</a>
-</div>
+    <div class="container">
+      <div class="row">
+        <div class="col-md"><a href="">Image</a></div>      
+      </div>
+    <section class="info">
+      <div class="row">
+        <div class="col-md">
+          <h1>CPSC 4379 CAMPUS SAFTEY APP 2022</h1>
+          <p>A prototype design of an app that allows college students to report non-emergency incidents that have occured on campus.</p>
+          <a href="">Interact with the prototype.</a>
+          <a href="">Explore the design process</a>
+        </div>
+        <div class="col-md">
+          <a href="">Image</a>
+        </div>
+      </div>
+    </section>
 <!--ARTICLES-->
-<div class="wrap">
-    <h1>RESEARCH</h1>
-</div>
 
-<div class="wrap">
-    <h1>DESIGN FLOW</h1>
-</div>
-
-<div class="wrap">
-    <h1>PROTOTYPE PROCESS</h1>
-</div>
-
-<div class="wrap">
-    <h1>USABILITY TEST ANALYSIS</h1>
-</div>
 <!--END OF ARTICLES-->
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
