--- a/reflection.html
+++ b/reflection.html
@@ -97,13 +97,13 @@
                 </dl>
                 <dl class="reflection-3">
                     <dt>The most interesting discoveries I made about designing, about myself, and about others...</dt>
-                    <dd>I discovered that I just want to become a better version of myself. Developing a healthy version of ourselves is kind of
+                    <dd>I discovered that I just want to become a better version of myself. Developing a healthier version of ourselves is kind of
                          like developing a good website. You begin with the content first, then style, then functionality. Progressive enhancement, 
-                         right? In this way, we create a version that is more accessible and responsive. I’ve discovered that most of us don’t 
-                         design our life in that way. We focus more on style (how we appear to others), then functionality (what we “behave” 
-                         like), and last we consider content (what we really know). <em>So am I talking about web design, psychology, what am I 
-                         talking about?</em> I’m talking about all of it! Design is communication. To understand how to effectively communicate 
-                         through design, I need to understand people too, and myself. That’s all I’m trying to say here.</dd>
+                         right? And let's not forget semantics! By developing in this way, we create a version that is more accessible and responsive. 
+                         I’ve discovered that most of us don’t design our life in this way. We focus more on style (how we appear to others), 
+                         then functionality (how we “behave” in front of others), and last we consider content (what we really know and value). <em>So am I talking about 
+                         web design, psychology, what am I talking about?</em> I’m talking about all of it! Design is communication. To understand how
+                         to effectively communicate through design, I need to understand people too, and myself. That’s all I’m trying to say here.</dd>
                 </dl>
                 <dl class="reflection-4">
                     <dt>The most important thing I learned personally...</dt>
