--- a/database.html
+++ b/database.html
@@ -32,7 +32,7 @@
     </header>
 <!--JUMBOTRON HERE-->
 <!--SECTION/ARTICES-->
-  <div class="container">
+  <div class="container database">
     <section class="info">
     <div class="row">
       <div class="col-md">
