--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -33,15 +33,18 @@
         Josephine Aaron Weathington
         </div>
     </header>
-    <div class="container">
-    <a href="">.ae header</a>
+    <div class="container web-buffalo">
+      <div class="row">
+        <div class="col-md">
+          <img src="assets/images/buffalo-web.webp">
+        </div>
+      </div>
     <section class="info">
       <div class="row">
         <div class="col-md">
-          <h1>IFCS 3650: GUIDED APPLICATIONS IN IT // BUFFALO RIVER ADVENTURERS 2022</h1>
-          <p>A static website collaboration for a fictional organization, Buffalo River Adventurers, to inspire outdoor enthusiasts to explore the 
-              Buffalo National River and to enjoy their experience in an environmentally friendly way.</p>
-          <p>Stylistic choices were made to...</p>
+          <h1>BUFFALO RIVER ADVENTURERS 2022</h1>
+          <p>A static website collaboration for a fictional organization, Buffalo River Adventurers. Designed to inspire outdoor enthusiasts to explore the 
+              Buffalo National River. A project of IFSC 3650: Guided Applications in IT.</p>
           <dl>
             <dt>My Role</dt>
             <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
@@ -49,8 +52,8 @@
           </dl>
           <a href="" target="blank">Visit the site,</a><span class="mobile-message"> but don't stop there. Check it out on mobile, too!</span>
         </div>
-        <div class="col-md">
-          <a href="">mobile .ae</a>
+        <div class="col-md-2">
+          <img src="assets/images/mobile-buffalo.gif">
         </div>
       </div>
     </section>
@@ -59,7 +62,7 @@
       <h2>CREDITS</h2>
       <p>Copywriter: Lillian McNeely</p>
       <p>Lead Designer: Nicholas Corn</p>
-      <p>Developers: C.S.S.</p>
+      <p>Developers: C.S.S. (Certified Success Squad)</p>
     </div>
 <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
