--- a/web-university-district.html
+++ b/web-university-district.html
@@ -34,25 +34,29 @@
         </div>
     </header>
   <div class="container">
-    <a href="">.ae header</a>
-    <section class="info">
-      <div class="row">
-        <div class="col-md">
-          <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
-          <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
-        encourage development, and to promote the business and services within the area.</p>
-          <p>Stylistic choices were made to...</p>
-            <dl>
-              <dt>My Role</dt>
-              <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
-            project. Later, my primary responsibility became mobile css development.</dd>
-            </dl>
-          <a href="" target="blank">Visit the site.</a>
-        </div>
-        <div class="col-md">
-        <a href="">mobile .ae</a>
-        </div>
+    <div class="row">
+      <div class="col-md">
+        <img src="assets/images/ud-web.webp">
       </div>
+    </div>
+    <section class="info">
+    <div class="row">
+      <div class="col-md">
+        <h1>IFCS 4610 UNIVERSITY DISTRICT 2022</h1>
+        <p>A wordpress website collaboration for the UALR University District Parnership to market the University District as a destination, to 
+        encourage development, and to promote the business and services within the area.</p>
+        <p>Stylistic choices were made to...</p>
+          <dl>
+            <dt>My Role</dt>
+            <dd>As the project manager, I was responsible for managing all project tasks, scheduling, and communication regarding our 
+            project. Later, my primary responsibility became mobile css development.</dd>
+          </dl>
+          <a href="" target="blank">Visit the site.</a>
+      </div>
+      <div class="col-md-2">
+        <img src="assets/images/mobile-ud.png">
+      </div>
+    </div>
     </section>
 
     <div class="credits">
