--- a/technical-doc.html
+++ b/technical-doc.html
@@ -34,19 +34,22 @@
         </div>
     </header>
     <div class="container">
-    <!--Large image of Adobe XD doc title After Effects-->
-    <a href="">.ae of xd</a>
+      <div class="row">
+        <div class="col-md">
+          <img src="assets/images/technical-doc.webp">
+        </div>
+      </div>
     <section class="info">
         <div class="row">
-            <div class="col-6 col-md-4">
+            <div class="col-md">
               <h1>VIEWING YOUR PROTOTYPE WITH ADOBE XD</h1>
               <p>Not everyone is familiar with Adobe XD, and certainly not our clients who seek us to design their vision. Creating a prototype 
     means little if our client doesn't know how to use the software to view it. So I created a short instructional document on
     how to view a website prototype through Adobe XD.</p>
               <a href="assets/documents/viewing-your-prototype.pdf" target="blank">View the document.</a>
             </div>
-            <div class="col-md-8">
-              <a href="">image</a>
+            <div class="col-md-4">
+              <img src="assets/images/xd.50.png">
             </div>
         </div>
     </section>
