--- a/database.html
+++ b/database.html
@@ -36,11 +36,13 @@
     <section class="info">
     <div class="row">
       <div class="col-md">
-        <h1>ITEC 3610: INTRO TO IT & APPS // DATABASE ASSESSMENT</h1>
-        <P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace. So here are a 
-          couple of exercies that I completed within Google Sheets. To the right is a database assessment that I completed.</P>
+        <h1>GETTING TO KNOW GOOGLE SHEETS</h1>
+        <P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace. I'm great with
+          Microsoft excel, but there's not harm getting comfy using Google Sheets, too. So here are a 
+          couple of exercies that I completed within Google Sheets while attending ITEC 3610: Intro to IT & Apps. To the right is a 
+          database assessment that I completed.</P>
         <a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
-          Check out the database on Google Sheets.</a>
+          Check it out on Google Sheets.</a>
       </div>
       <div class="col-md">
         <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="google sheet image of database assessment">
@@ -54,10 +56,10 @@
         <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="google sheet image of inventory database">
       </div>
       <div class="col-md">
-        <h1>ITEC 3610: INTRO TO IT & APPS // INVENTORY DATABASE</h1>
+        <h1>INVENTORY DATABASE</h1>
         <p>An inventory database exercise that I completed.</p>
         <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">
-          Check out the database on Google Sheets.</a>
+          Check it out on Google Sheets.</a>
       </div>
     </div>
   </section>
