--- a/programming.html
+++ b/programming.html
@@ -38,9 +38,12 @@
         <section class="info">
         <div class="row">
             <div class="col-md">
-                <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // MARS ROVER 2022</h1>
-                    <p>A JSON API retrieval of the Mars Rover photos from NASA that I developed.</p>
-                    <a href="" target="blank">Test the program here.</a>
+                <h1>MARS ROVER 2022</h1>
+                    <p>How can I call myself a web developer if I don't know basic JavaScript and JSON? Well, thank goodness I do! 
+                        Here are a couple of programming projects I developed while attending ITEC 3650: Guided Applications In IT. To
+                        the right is a JSON API retrieval of the Mars Rover photos from NASA that I developed. Actually, it's just an
+                    image of the API retrieval, but you may click the link below to check out the application.</p>
+                    <a href="" target="blank">Test the application here.</a>
             </div>
             <div class="col-md">
                 <img src="assets/images/mars-explorer.webp" alt="screen image of mars rover program">
@@ -58,9 +61,9 @@
                 <img src="assets/images/currency-value.webp" alt="screen image of currecy value program">
             </div>
             <div class="col-md">
-                <h1>ITEC 3650: GUIDED APPLICATIONS IN IT // CURRENCY VALUE HISTORY</h1>
-                <p>An application of JSON to retreive & convert currency values from Polygon.io that I developed.</p>
-                <a href="" target="blank">Test the program here.</a>
+                <h1>CURRENCY VALUE HISTORY</h1>
+                <p>This image is of an application of JSON to retreive & convert currency values from Polygon.io.</p>
+                <a href="" target="blank">Test the application here.</a>
             </div>
         </div>
         <div class="row justify-content-end">
