--- a/web-buffalo-river.html
+++ b/web-buffalo-river.html
@@ -53,7 +53,7 @@
           <a href="" target="blank">Visit the site,</a><span class="mobile-message"> but don't stop there. Check it out on mobile, too!</span>
         </div>
         <div class="col-md-2">
-          <img src="assets/images/mobile-buffalo.gif">
+          <img src="assets/images/mobile-buffalo.gif" alt="an illustration of the buffalo river website on a mobile phone. Also includes an animation of the menu sliding open from left to right.">
         </div>
       </div>
     </section>
