--- a/web-university-district.html
+++ b/web-university-district.html
@@ -54,7 +54,7 @@
           <a href="" target="blank">Visit the site.</a>
       </div>
       <div class="col-md-2">
-        <img src="assets/images/mobile-ud.png">
+        <img src="assets/images/mobile-ud.png" alt="an illustration of the university district website on a mobile phone">
       </div>
     </div>
     </section>
