--- a/programming.html
+++ b/programming.html
@@ -73,16 +73,15 @@
         </div>
         </section>
 
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top fixed-bottom">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
     <!--brand logo here-->
     </div>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+    <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
       <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
       <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
-      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
     </ul>
 </footer>
 </div>
