--- a/typography.html
+++ b/typography.html
@@ -90,18 +90,17 @@
         <p>Photograph // James Baldwin Image: Popperfoto/Getty Images</p>
         <p>Photograph // George Floyd Image-Left: Darnella Frazier</p>
     </div>
-<footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
-    <!--brand logo here-->
-    </div>
-
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
-      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
-      <li class="ms-3"><a class="text-muted" href="#">INSTAGRAM</a></li>
-    </ul>
-</footer>
+    <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top fixed-bottom">
+        <div class="col-md-4 d-flex align-items-center">
+          <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+        <!--brand logo here-->
+        </div>
+    
+        <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
+          <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+          <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+        </ul>
+    </footer>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
