--- a/database.html
+++ b/database.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
 <meta charset="utf-8">
 <title>JAW's Portfolio</title>
@@ -10,7 +10,7 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
 <link href="assets/css/style.css" rel="stylesheet">
 </head>
-<body>
+<body class="d-flex flex-column h-100">
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
@@ -34,13 +34,14 @@
 <!--SECTION/ARTICES-->
   <div class="container database">
     <section class="info">
-    <div class="row">
-      <div class="col-md">
+      <article class="article-1">
+    <div class="row gx-5 justify-content-between">
+      <div class="col-md-5">
         <h1>GETTING TO KNOW GOOGLE SHEETS</h1>
         <P>Part of the Web Development program at UALR is to learn and utilize the tools within Google Workspace. I'm great with
           Microsoft excel, but there's not harm getting comfy using Google Sheets, too. So here are a 
-          couple of exercies that I completed within Google Sheets while attending ITEC 3610: Intro to IT & Apps. To the right is a 
-          database assessment that I completed.</P>
+          couple of exercies that I completed within Google Sheets while attending ITEC 3610: Intro to IT & Apps. To the right is an 
+          image of a database assessment that I completed.</P>
         <a href="https://docs.google.com/spreadsheets/d/10S_YFi3IaCql0UtdVeLnYArWxvhv_Fti9OCMvuuRtwg/edit#gid=0" target="blank">
           Check it out on Google Sheets.</a>
       </div>
@@ -48,22 +49,23 @@
         <img src="assets/images/database-assessment.1.webp" class="img-fluid" alt="google sheet image of database assessment">
       </div>
     </div>
-    </section>
-    
-    <section class="info">
-    <div class="row">
+    </article>
+
+    <article class="article-2">
+    <div class="row gx-5 justify-content-between">
       <div class="col-md">
         <img src="assets/images/database-inventory.1.webp" class="img-fluid" alt="google sheet image of inventory database">
       </div>
-      <div class="col-md">
+      <div class="col-md-5">
         <h1>INVENTORY DATABASE</h1>
-        <p>An inventory database exercise that I completed.</p>
+        <p>Another database exercise of jewelry inventory.</p>
         <a href="https://docs.google.com/spreadsheets/d/1BW0xTsDj11Ng4rZ5d2E6kgT7OSWvgPt40e6rlMMmazM/edit#gid=0" target="blank">
           Check it out on Google Sheets.</a>
       </div>
     </div>
+    </article>
   </section>
-  <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top fixed-bottom">
+  <footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
     <!--brand logo here-->
