--- a/projects.html
+++ b/projects.html
@@ -144,7 +144,7 @@
         <a href="reflection.html" target="blank">...</a>
     </div>
 -->
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top fixed-bottom">
+<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
     <div class="col-md-4 d-flex align-items-center">
       <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
     <!--brand logo here-->
