--- a/ux-campus-police.html
+++ b/ux-campus-police.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
 <head>
 <meta charset="utf-8">
 <title>JAW's Portfolio</title>
@@ -13,7 +13,7 @@
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@200;300;400;700&display=swap" rel="stylesheet">
 </head>
-<body>
+<body class="d-flex flex-column h-100">
     <header class="primary">
         <nav class="navbar bg-light">
             <div class="container text-muted border-bottom">
@@ -33,6 +33,7 @@
         Josephine Aaron Weathington
       </div>
     </header>
+    <main class="flex-shrink-0">
     <div class="container">
       <div class="row">
         <div class="col-md"><a href="">Image</a></div>      
@@ -53,18 +54,19 @@
 <!--ARTICLES-->
 
 <!--END OF ARTICLES-->
-<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top fixed-bottom">
-    <div class="col-md-4 d-flex align-items-center">
-      <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
-    <!--brand logo here-->
-    </div>
+<footer class="container d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+  <div class="col-md-4 d-flex align-items-center">
+    <span class="mb-3 mb-md-0 text-muted">&copy; JAW</span>
+  <!--brand logo here-->
+  </div>
 
-    <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
-      <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
-    </ul>
+  <ul class="nav col-md-4 mb-3 align-items-center justify-content-end list-unstyled d-flex">
+    <li class="ms-3"><a class="text-muted" href="#">EMAIL</a></li>
+    <li class="ms-3"><a class="text-muted" href="#">LINKEDIN</a></li>
+  </ul>
 </footer>
 </div>
+</main>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.min.js" integrity="sha384-IDwe1+LCz02ROU9k972gdyvl+AESN10+x7tBKgc9I5HFtuNz0wWnPclzo6p9vxnk" crossorigin="anonymous"></script>
 </body>
 </html>
